--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -70,17 +70,15 @@ The first step in this approach is to generate a statistical table, which can be
 - `dims`: a named list where each list element contains a hierarchy created with functionality from package [**sdcHierarchies**](ttps://cran.r-project.org/package=sdcHierarchies) and each name refers to a variable in `x`
 - `w`: either `NULL` (no weights) or the name of a variable in `x` that contains weights
 - `countvars`: an optional character vector of variables in `x` holding counts. In any case a special count variable `total` is internally generated that is `1` for each row of `x`
-- `params_cnts`: an object containing perturbation parameters relevant to `countvars` that needs to be created using `ck_params_cnts()`.
+- `numvars`: an optional character vector of variables in `x` holding numerical variables that can later be perturbed.
 
 ```{r, echo = FALSE}
 # additional parameters for ck_setup()
-#- `numvars`: an optional character vector of variables in `x` holding numerical variables that can later be perturbed.
+#- `params_cnts`: an object containing perturbation parameters relevant to `countvars` that needs to be created using `ck_params_cnts()`.
 #- `params_nums`: if `numvars` was specified, an object containing perturbation parameters relevant to `numvars` that must to be #created using `ck_params_nums()`.
 ```
 
-
 We now show how to generate the required inputs. The first step is to prepare the inputdata.
-
 
 ### Specifying inputdata
 The testdata set we are using in this example contains information on person-level along with sampling weights as well as some categorical and continuously scaled variables. We also compute some binary variables for which we also want to create perturbed tables. 
@@ -124,27 +122,6 @@ After all dimensions have been specified, these inputs must then be combined int
 dims <- list(sex = dim_sex, age = dim_age)
 ```
 
-
-### Define perturbation parameters for count variables
-The next task is to define parameters that are used to perturb count variables which can be archieved using function `ck_params_cnts`. This function wraps `pt_create_pTable` from the [**ptable**](https://github.com/sdcTools/ptable) package, so for the parameters have a look at the help page for this function. A typical application is shown below:
-
-```{r}
-params_cnts <- ck_params_cnts(
-  D = 5,
-  V = 3,
-  js = 2,
-  pstay = 0.5,
-  optim = 1,
-  mono = TRUE
-)
-```
-
-The output of `ck_params_cnts` is an object that can be directly used in `ck_setup()` as we will see later.
-
-### Define perturbation parameters for continuous variables
-Future versions of `cellKey` will allow to perturb continuous variables as well. This is however not yet implemented.
-
-
 ### Setup a table instance
 We now have prepared the inputs and can define a generic statistical table using `ck_setup()` as shown below:
 
@@ -154,8 +131,7 @@ tab <- ck_setup(
   rkey = "rkeys",
   dims = dims,
   w = "sampling_weight",
-  countvars = c("cnt_males", "cnt_highincome"),
-  params_cnts = params_cnts
+  countvars = c("cnt_males", "cnt_highincome")
 )
 ```
 
@@ -167,6 +143,52 @@ These objects also have a custom print method, showing some general information 
 print(tab)
 ```
 
+### Define perturbation parameters for count variables
+The next task is to define parameters that are used to perturb count variables which can be archieved using function `ck_params_cnts`. This function wraps `pt_create_pTable` from the [**ptable**](https://github.com/sdcTools/ptable) package, so for the parameters have a look at the help page for this function. A typical application is shown below:
+
+```{r}
+# two different perturbation parameter sets
+p_cnts1 <- ck_params_cnts(
+  D = 5,
+  V = 3,
+  js = 2,
+  pstay = 0.5,
+  optim = 1,
+  mono = TRUE)
+tab$params_cnts_set(val = p_cnts1, v = "total")
+
+# create alternative perturbation parameters
+p_cnts2 <- ck_params_cnts(
+  D = 8,
+  V = 3,
+  js = 2,
+  pstay = 0.5,
+  optim = 1,
+  mono = TRUE)
+```
+
+The output of `ck_params_cnts` is an object that can be directly used in method `params_cnts_set()` as it is now shown:
+
+
+```{r}
+# use `p_cnts1` for variable "total" (which always exists)
+tab$params_cnts_set(val = p_cnts1, v = "total")
+
+# use `p_cnts2` for all other variables
+tab$params_cnts_set(val = p_cnts2, v = c("cnt_males", "cnt_highincome"))
+```
+
+Modifying perturbation parameters for specfic variables is easy, too. It is only required to apply the `params_cnts_set()`-method again.
+
+```{r}
+# use `p_cnts1` for variable "cnt_highincome" (replacing previously set values)
+tab$params_cnts_set(val = p_cnts1, v = "cnt_highincome")
+```
+
+### Define perturbation parameters for continuous variables
+Future versions of `cellKey` will allow to perturb continuous variables as well. This is however not yet implemented.
+
+
 ### Compute perturbed tables
 It is now possible to finally perturbed variables using the `perturb()`-method. As `tab` - the object created with `ck_setup()` - already contains all possible data, the only required input is the name of a variable that should be perturbed.
 
@@ -177,25 +199,6 @@ tab$perturb(v = "total")
 ```
 
 After this call, object `tab` is updated and contains now also perturbed values for variable `total`. We note that no explicit assignment is required.
-
-### Modify perturbation parameters
-Using method `params_cnts()` it is possible to modify the current set perturbation parameters. This is useful if one wants to use different perturbation inputs for different variables. We now show how to replace the current perturbation input for count variables. The first step is to create a new object containing perturbation parameters using `ck_params_cnts()`.
-```{r}
-params_cnts2 <- ck_params_cnts(
-  D = 8,
-  V = 10,
-  js = 4
-)
-```
-
-Updating/replacing the perturbation parameters can then be achieved as shown below:
-
-```{r}
-tab$params_cnts(params_cnts2)
-```
-
-From now on, these parameters will be used to perturb any count variables.
-
 
 ```{r}
 tab$perturb(v = "cnt_males")
