--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -22,7 +22,7 @@ library(rmarkdown)
 This package implements methods to provide perturbation for statistical tables. The implementation if greatly inspired by the the paper *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar). This approach however was generalized and a new specification on how record keys are specified and the lookup-tables are defined is used. This package makes usage of perturbation tables that can be defined in the [**ptable**](https://github.com/sdcTools/ptable) package. This document describes the usage of version ``r packageVersion("cellKey")`` of the package.
 
 ## Installation
-Package [**cellKey**](https://github.com/sdcTools/cellKey) is not yet on `CRAN` and thus needs to be installed from source. The following code gives instructions on how to install the latest version of the package directly from [**github.com**](https://www.github.com):
+Package [**cellKey**](https://github.com/sdcTools/cellKey) is not yet on `CRAN` and therefore needs to be installed from source. The following code gives instructions on how to install the latest version of the package directly from [**github.com**](https://www.github.com):
 
 ```{r, eval = FALSE}
 # update your R installation
@@ -36,8 +36,7 @@ remotes::install_github(
   repo = "sdcTools/cellKey",
   dependencies = TRUE,
   build_opts = "--no-resave-data",
-  force = TRUE
-)
+  force = TRUE)
 ```
 
 ## Main Features
@@ -61,8 +60,6 @@ library(cellKey)
 packageVersion("cellKey")
 ```
 
-
-
 The first step in this approach is to generate a statistical table, which can be achieved using `ck_setup`. This function generates an object that contains all the information required to perturb count- (and optionally continuously scaled) variables. There are however a few inputs that `ck_setup()` requires and that need to be generated beforehand. These inputs are:
 
 - `x`: a `data.frame` or `data.table` containing microdata
@@ -72,13 +69,7 @@ The first step in this approach is to generate a statistical table, which can be
 - `countvars`: an optional character vector of variables in `x` holding counts. In any case a special count variable `total` is internally generated that is `1` for each row of `x`
 - `numvars`: an optional character vector of variables in `x` holding numerical variables that can later be perturbed.
 
-```{r, echo = FALSE}
-# additional parameters for ck_setup()
-#- `params_cnts`: an object containing perturbation parameters relevant to `countvars` that needs to be created using `ck_params_cnts()`.
-#- `params_nums`: if `numvars` was specified, an object containing perturbation parameters relevant to `numvars` that must to be #created using `ck_params_nums()`.
-```
-
-We now show how to generate the required inputs. The first step is to prepare the inputdata.
+We continue to show how to generate the required inputs. The first step is to prepare the inputdata.
 
 ### Specifying inputdata
 The testdata set we are using in this example contains information on person-level along with sampling weights as well as some categorical and continuously scaled variables. We also compute some binary variables for which we also want to create perturbed tables. 
@@ -89,16 +80,16 @@ dat[, cnt_males := ifelse(sex == "male", 1, 0)]
 dat[, cnt_highincome := ifelse(income >= 9000, 1, 0)]
 ```
 
-We are now adding record keys with 7 digits to the data set that are going to be used later using function `ck_generate_rkeys` as shown below:
+We are now adding record keys (which will be referenced later) with 7 digits to the data set using function `ck_generate_rkeys` as shown below:
 
 ```{r}
 dat$rkeys <- ck_generate_rkeys(dat = dat, nr_digits = 7)
 print(head(dat))
 ```
 
-To ensure that the same record keys are computed each and every time for the same data set, a seed based on the sha1-hash of the input dataset is computed and used before drawing the record keys.
+To ensure that the same record keys are computed each and every time for the same data set, a seed based on the sha1-hash of the input dataset is computed by default in `ck_generate_rkeys`. This seed is used before sampling the record keys and may be overwritten using the `seed` argument.
 
-The goal of this introduction is to create a perturbed table of counts of variables `sex` by `age` for all observations as well as for the subgroups in `cnt_males` and `cnt_highincome` that are non-zero. We also want to create perturbed tables of continously scaled variables `savings` and `income` also giving the hierarchical structure defined by `sex` by `age`.
+The goal of this introduction is to create a perturbed table of counts of variables `sex` by `age` for all observations as well as for the subgroups given by  `cnt_males` and `cnt_highincome` that are non-zero. We also want to create perturbed tables of continously scaled variables `savings` and `income` also giving the hierarchical structure defined by `sex` by `age`.
 
 ### Specifying dimensions
 It is required to define hierarchies for each of the classifying variables of the desired table. There are two ways how the hierarchical structure of these variables (including sub-totals) can be specified. One way is to use `"@; value` format as (also) used in [**sdcTable**](ttps://cran.r-project.org/package=sdcTable). We would suggest however, to use the second alternative which is using functionality from package [**sdcHierarchies**](ttps://cran.r-project.org/package=sdcHierarchies). In this vignette, we only show the preferred way to generate hierarchies for categorical variables `age` and `sex` below:
@@ -131,8 +122,8 @@ tab <- ck_setup(
   rkey = "rkeys",
   dims = dims,
   w = "sampling_weight",
-  countvars = c("cnt_males", "cnt_highincome")
-)
+  countvars = c("cnt_males", "cnt_highincome"),
+  numvars = c("income", "savings"))
 ```
 
 `ck_setup()` returns a `R6` class object that contains not only the relevant data but also all available methods. Thus, it is not required to assign the results of such methods to new objects, instead, the object itself is automatically updated.
@@ -155,7 +146,6 @@ p_cnts1 <- ck_params_cnts(
   pstay = 0.5,
   optim = 1,
   mono = TRUE)
-tab$params_cnts_set(val = p_cnts1, v = "total")
 
 # create alternative perturbation parameters
 p_cnts2 <- ck_params_cnts(
@@ -167,8 +157,7 @@ p_cnts2 <- ck_params_cnts(
   mono = TRUE)
 ```
 
-The output of `ck_params_cnts` is an object that can be directly used in method `params_cnts_set()` as it is now shown:
-
+`ck_params_cnts()` returns objects that can be used as inputs in method `params_cnts_set()`. In argument `v` one may specify count variables for which the supplied perturbation parameters should be used. If `v` is not specified, the perturbation parameters are used for all count variables. 
 
 ```{r}
 # use `p_cnts1` for variable "total" (which always exists)
@@ -178,15 +167,67 @@ tab$params_cnts_set(val = p_cnts1, v = "total")
 tab$params_cnts_set(val = p_cnts2, v = c("cnt_males", "cnt_highincome"))
 ```
 
-Modifying perturbation parameters for specfic variables is easy, too. It is only required to apply the `params_cnts_set()`-method again.
+It is therefore entirely possible to use different parameter sets for different variables. Modifying perturbation parameters for some variables is easy, too. It is only required to apply the `params_cnts_set()`-method again which will replace any previously defined parameters.
 
 ```{r}
-# use `p_cnts1` for variable "cnt_highincome" (replacing previously set values)
 tab$params_cnts_set(val = p_cnts1, v = "cnt_highincome")
 ```
 
 ### Define perturbation parameters for continuous variables
-Future versions of `cellKey` will allow to perturb continuous variables as well. This is however not yet implemented.
+Setting and defining perturbation parameters for continuous variables works similarily. The required functions are `ck_params_num()` to create input objects that can be set with the `params_nums_set` method.  Please note that it is possibly by specifying the `path` argument in both `ck_params_nums()` and `ck_params_cnts()` to save the parameters additionally as yaml-file. Using `ck_read_yaml()`, these files can later be imported again. This feature is useful for re-using parameter settings.
+
+
+```{r, echo = FALSE}
+warning("find a suitable reference to the D4.2 deliverable")
+```
+
+The underlying framework on how to perturb continuous tables differs from the proposed method from `ABS`. One possible approach is based on a *"flex function"*. This approach allowed to apply different magnitude of noise to larger and smaller cells. Users can define the required parameters for the flex-approach with function `ck_flexparams()`. The required inputs are:
+
+- `fp`: the flexpoint defining at which point should the underlying noise coefficient function reach its desired maximum (which is defined by the first element of `p`)
+- `p`: numeric vector of length `2` with `p[1] > p[2]` where both elements specify a percentage. The first value refers to the desired maximum perturbation percentage for small cells (depending on fp) while the second element refers to the desired maximum perturbation percentage for large cells.
+- `epsilon`: a numeric vector in descending order with all values in `[0; 1]` and with the first element forced to equal `1`. The length of this parameter must correspond with the number of `top_k` specified in `ck_params_nums()` (which will be discussed later). 
+
+
+```{r}
+# parameters for the flex-function
+mult_flex <- ck_flexparams(
+  fp = 1000,
+  p = c(0.3, 0.03),
+  epsilon = c(1, 0.5, 0.2))
+```
+
+
+
+
+```{r}
+p_nums1 <- ck_params_nums(
+  type = "top_contr",
+  top_k = 3,
+  D = 5,
+  l = 0.2,
+  mult_params = mult_flex,
+  mu_c = 2,
+  same_key = FALSE,
+  separation = TRUE)
+```
+
+Such parameters can be attached to continuous variables using the `params_nums_set()`-method as shown below:
+
+```{r}
+tab$params_nums_set(v = c("income", "savings"), val = p_nums1)
+```
+
+Parameter `mu_c` in `ck_params_nums()` ... 
+
+```{r, eval = FALSE}
+tab$supp_p(v = "income", p = 85)
+tab$supp_pq(v = "income", p = 85, q = 90)
+tab$supp_nk(v = "income", n = 2, k = 90)
+tab$supp_freq(v = "income", n = 5)
+```
+
+
+
 
 
 ### Compute perturbed tables
@@ -241,7 +282,6 @@ tab$measures_cnts(v = "total", exclude_zeros = TRUE)
 
 This function returns a list with several utility measures that are now discussed. For further information have a look at `?ck_cnt_measures` as the same set of measures can also be computed for two vectors containing original and perturbed values.
 
-
 - `overview`: a `data.table` with the following three columns:
     * noise: amount of noise computed as orig - pert
     * cnt: number of cells perturbed with the value given in column noise
@@ -264,6 +304,9 @@ If argument `exclude_zeros` is `TRUE` (the default setting), empty cells are exc
 
 ### Perturbing continuously scaled variables
 The perturbation of magnitude tables is currently in development and will be available in future versions of the `cellKey` package.
+
+
+
 
 ```{r, echo = FALSE}
 #The next example shows how to create a perturbed table of continuous data using sampling weights. We can perturb all variables that #were specified in argument `numvars` when calling `ck_setup()`. Note that it is also possible to specify multiple variables at once.
