--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -17,8 +17,7 @@ vignette: >
 library(rmarkdown)
 ```
 
-# Introduction
-
+## About the cellKey package
 This package implements methods to provide perturbation for statistical tables. The implementation if greatly inspired by the the paper *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar). This approach however was generalized and a new specification on how record keys are specified and the lookup-tables are defined is used. This package makes usage of perturbation tables that can be defined in the [**ptable**](https://github.com/sdcTools/ptable) package. This document describes the usage of version ``r packageVersion("cellKey")`` of the package.
 
 ## Installation
@@ -133,7 +132,9 @@ These objects also have a custom print method, showing some general information 
 print(tab)
 ```
 
-### Define perturbation parameters for count variables
+
+### Defining perturbation parameters
+#### Perturbation parameters for count variables
 The next task is to define parameters that are used to perturb count variables which can be achieved with `ck_params_cnts`. This function requires as input the result of function `pt_create_pTable` from the [**ptable**](https://github.com/sdcTools/ptable) package. Please refer also to the documentation of this package for information on the required parameters. A typical application is shown below:
 
 ```{r, message=FALSE}
@@ -164,12 +165,8 @@ tab$params_cnts_set(val = p_cnts2, v = "cnt_highincome")
 
 It is therefore entirely possible to use different parameter sets for different variables. Modifying perturbation parameters for some variables is easy, too. It is only required to apply the `params_cnts_set()`-method again which will replace any previously defined parameters.
 
-### Define perturbation parameters for continuous variables
+#### Perturbation parameters for continuous variables
 Setting and defining perturbation parameters for continuous variables works similarily. The required functions are `ck_params_num()` to create input objects that can be set with the `params_nums_set` method.  Please note that it is possibly by specifying the `path` argument in both `ck_params_nums()` and `ck_params_cnts()` to save the parameters additionally as yaml-file. Using `ck_read_yaml()`, these files can later be imported again. This feature is useful for re-using parameter settings.
-
-```{r, echo = FALSE}
-warning("find a suitable reference to the D4.2 deliverable")
-```
 
 The underlying framework on how to perturb continuous tables differs from the proposed method from `ABS`. One possible approach is based on a *"flex function"*. This approach (which is described in deliverable `D4.2` in the project [perturbative confidentiality methods](https://ec.europa.eu/eurostat/cros/content/perturbative-confidentiality-methods_en) allowes to apply different magnitude of noise to larger and smaller cells. Users can define the required parameters for the flex-approach with function `ck_flexparams()`. The required inputs are:
 
@@ -179,7 +176,7 @@ The underlying framework on how to perturb continuous tables differs from the pr
 
 ```{r}
 # parameters for the flex-function
-mult_flex <- ck_flexparams(
+p_flex <- ck_flexparams(
   fp = 1000,
   p = c(0.3, 0.03),
   epsilon = c(1, 0.5, 0.2))
@@ -192,51 +189,101 @@ In the [**cellKey**](https://github.com/sdcTools/cellKey) package it is possible
 - `"range"`: the difference between largest and smallest unweighted contributions for each cell are used as base for the perturbation procedure
 - `"sum"`: weighted cellvalues are used as starting points for the perturbation
 
-Further important parameters are:
+
+Another, more basic approach, is to use a constant perturbation magnitude for all cells, independent on their (weighted) values. The required parameters can be defined with `ck_simpleparams()` as shown below:
+
+```{r}
+# parameters for the simple approach
+p_simple <- ck_simpleparams(
+  p = 0.05,
+  epsilon = 1)
+```
+
+In this appraoch it is only required to specify a single percentage value `p` and - as in the case for the flex function - a vector of epsilons that are used in the case when `top_k > 1`. 
+
+Further important parameters for `ck_params_nums()` are:
 
 - `mu_c`: an extra amount of perturbation applied to sensitive cells (restricted to the first of `top_k` noise components). In the following example we demonstrate how to identify sensitive cells for numeric variables.
 - `same_key`: a logical value specifying if the original cell key (`TRUE`) should be used for the lookup of the largest contributor of a cell or if a perturbation of the cellkey itself (`FALSE`) should take place.
-- `parity`: should cells with an even/odd number of contributors perturbed using different ptables.
+- `use_zero_rkeys`: a logical value defining if record keys of units not contributing to a specific numeric variables should be used (`TRUE`) or ignored (`FALSE`) when cell keys are computed.
+
+A very important parameter is `ptab` which actually holds the perturbation tables in which perturbation values are looked up. This input can be specified differently in the case when numeric variables should be perturbed. It can be either an object derived from `ptable::pt_create_pTable(..., table = "nums")` in the most simple case. More advanced is to supply a named list, where the allowed names are shown below and each element must be the output of `ptable::pt_create_pTable(..., table = "nums")`.
+
+- `"all"`: this ptable will be used for all cells; if specified, list-elements named `"even"`or `"odd"` are ignored
+- `"even"`: this perturbation table will be used to look up perturbation values for cells with an even number of contributors
+* `"odd"`: will be used to look up perturbation values for cells with an odd number of contributors
+* `"small_cells"`: if specified, this ptable will be used to extract perturbation values for very small cells
+
+Please note, that if the goal is to have different perturbation tables for cells with an even/odd number of contributors, both `"even"` or `"odd"` must be available in the input list. In the chunk below we create four different perturbation tables. For details on the parameters, please look at the documentation of the [`ptable`](https://github.com/sdcTools/ptable) package.
 
 ```{r}
-# create a ptable using the ptable-pkg
-para <- ptable::pt_create_pParams(
-  D = 5,
-  V = 1,
-  table = "nums",
-  step = 0.2,
-  icat = c(1, 5),
-  type = "all")
-ptab <- ptable::pt_create_pTable(para)
+# create different ptable using the ptable-pkg
+p_all <- ptable::pt_create_pParams(
+  D = 5, V = 3, step = 0.2, 
+  icat = c(1, 5, 20), table = "nums", type = "all")
+ptab_all <- ptable::pt_create_pTable(p_all)
 
+p_even <- ptable::pt_create_pParams(
+  D = 8, V = 3, step = 0.5, 
+  icat = c(1, 5, 10), table = "nums", type = "even")
+ptab_even <- ptable::pt_create_pTable(p_even)
+
+p_odd <- ptable::pt_create_pParams(
+  D = 6, V = 3, step = 1, 
+  icat = c(1, 10), table = "nums", type = "odd")
+ptab_odd <- ptable::pt_create_pTable(p_odd)
+
+p_sc <- ptable::pt_create_pParams(
+  D = 5, V = 1, step = 1, 
+  icat = c(1, 3, 15), table = "nums", type = "all")
+ptab_sc <- ptable::pt_create_pTable(p_sc)
+```
+
+We can then use these tables to finally create objects containing all the required information to create perturbed magnitude tables using `ck_params_nums`. In the first case we want the same perturbation table (`ptab_all`) for cells with an even/odd number of contributors but want to use `ptab_sc` for very small cells. 
+```{r}
 p_nums1 <- ck_params_nums(
   type = "top_contr",
   top_k = 3,
-  ptab = ptab,
-  mult_params = mult_flex,
+  ptab = list(all = ptab_all, small_cells = ptab_sc),
+  mult_params = p_flex,
   mu_c = 2,
-  same_key = FALSE)
+  same_key = FALSE,
+  use_zero_rkeys = TRUE)
 ```
 
-
-## Todo: describe separation case
-
-Such parameters can be attached to continuous variables using the `params_nums_set()`-method as shown below:
+The second input we generate should use different ptables for cells with an even/odd number of contributing units (`ptab_even` and `ptab_odd`) but should not use a specific perturbation table for very small cells.
 
 ```{r}
-tab$params_nums_set(v = c("income", "savings"), val = p_nums1)
+p_nums2 <- ck_params_nums(
+  type = "mean",
+  ptab = list(even = ptab_even, odd = ptab_odd),
+  mult_params = p_simple,
+  mu_c = 1.5,
+  same_key = FALSE,
+  use_zero_rkeys = TRUE)
 ```
 
+The package internally computes the separation point that is used for very small cells in case this is required. Details on this can also be found in deliverable [`D4.2`]((https://ec.europa.eu/eurostat/cros/content/perturbative-confidentiality-methods_en)).
 
-Setting sensitive cells: 
-Parameter `mu_c` in `ck_params_nums()` ... 
+Now we can attach the results from `ck_params_nums()` to numeric variables using the `params_nums_set()`-method as shown below:
 
-```{r, eval = FALSE}
-tab$supp_p(v = "income", p = 85)
-tab$supp_pq(v = "income", p = 85, q = 90)
-tab$supp_nk(v = "income", n = 2, k = 90)
-tab$supp_freq(v = "income", n = 5)
-tab$supp_val(v = "income", n = 1000)
+```{r}
+tab$params_nums_set(v = "income", val = p_nums1)
+tab$params_nums_set(v = "savings", val = p_nums1)
+```
+
+In order to make use of parameter `mu_c` that allows ab add extra amount of protection to sensitive cells, one may identify sensitive cells according to some rules. The following methods to identify sensitive cells are implemented:
+
+- `supp_p()`: identify sensitive cells based on p%-rule
+- `supp_pp()`: identify sensitive cells based on pq%-rule
+- `supp_nk()`: identify sensitive cells based on nk-dominance rule
+- `supp_freq()`: identify sensitive cells based on minimal frequencies for (weighted) number of contributors
+- `supp_val()`: identify sensitive cells based on (weighted) cell values
+
+We now want to set all cells for variable `income` as sensitive to which less than `15` units contribute.
+
+```{r, eval = TRUE}
+tab$supp_freq(v = "income", n = 15, weighted = FALSE)
 ```
 
 ### Compute perturbed tables
@@ -248,23 +295,24 @@ It is now possible to finally perturbed variables using the `perturb()`-method. 
 tab$perturb(v = "total")
 ```
 
-After this call, object `tab` is updated and contains now also perturbed values for variable `total`. We note that no explicit assignment is required.
+After this call, object `tab` is updated and contains now also perturbed values for variable `total`. We note that no explicit assignment is required. The following code shows that we also can perturb cnt- and numerical variables in one single call.
 
 ```{r}
-tab$perturb(v = "cnt_highincome")
+tab$perturb(v = c("cnt_highincome", "savings", "income"))
 ```
 
-A `data.table` containing original and perturbed values can now be extracted using the `freqtab()`-method as discussed next.
+A `data.table` containing original and perturbed values can now be extracted using the `freqtab()`- and `numtab()` methods as discussed next.
 
-### Extract perturbed tables
-Applying the `freqtab()`-methods to one ore more already perturbed variables returns a `data.table` that contains for each table cell the unpertubed and perturbed (weighted and/or unweighted) counts. This function has the following arguments:
+### Extracting results
+#### Obtain perturbed tables for count tables
+Applying the `freqtab()`-method to one ore more already perturbed variables returns a `data.table` that contains for each table cell the unpertubed and perturbed (weighted and/or unweighted) counts. This function has the following arguments:
 
 - `v`: one or more variable names of already perturbed count variables
 - `path`: if not `NULL`, a (relative or absolute) path to which the resulting output table should be written. A `csv` file will be generated and `.csv` will be appended to the value provided.
 
-The method returns a `data.table` with all combinations of the dimensional variables in the first $n$ colums and after those, all (or some) of the following columns:
+The method returns a `data.table` with all combinations of the dimensional variables in the first $n$ columns and after those the following columns:
 
-- `vname`: name of the perturbed variable (always included)
+- `vname`: name of the perturbed variable
 - `uwc`: unweighted counts
 - `wc`: weighted counts
 - `puwc`: perturbed unweighted counts
@@ -274,7 +322,22 @@ The method returns a `data.table` with all combinations of the dimensional varia
 tab$freqtab(v = c("total", "cnt_highincome"))
 ```
 
-### Computing utility measures for count variables
+#### Obtain perturbed tables for magnitude tables
+Using the `numtab()`-method allows to extract results for continuous variables. The required inputs are the same as for the `freqtab()`-method and the output returns a `data.table` with all combinations of the dimensional variables in the first $n$ columns and the following additional columns:
+
+- `vname`: name of the perturbed variable
+- `uws`: unweighted sum
+- `ws`: weighted cellsum
+- `pws`: perturbed weighted sum of the given cell
+
+We now have a look at the results of the variables `savings` and `income` that we already have perturbed.
+
+```{r}
+tab$numtab(v = c("savings", "income"))
+```
+
+### Utility-measures
+#### Utility measures for count variables
 Method `measures_cnts()` allows to compute information loss measures for perturbed count variables. Its application is as simple as:
 
 ```{r}
@@ -303,43 +366,10 @@ This function returns a list with several utility measures that are now discusse
 
 If argument `exclude_zeros` is `TRUE` (the default setting), empty cells are excluded when computing distance-based measures `d1`, `d2` and `d3`.
 
-### Perturbing continuously scaled variables
-The perturbation of magnitude tables is currently in development and will be available in future versions of the `cellKey` package.
+#### Utility measures for continuous variables
+For now, no utility measures for continuous variables are available. This will change in a future version.
 
-
-
-
-```{r, echo = FALSE}
-#The next example shows how to create a perturbed table of continuous data using sampling weights. We can perturb all variables that #were specified in argument `numvars` when calling `ck_setup()`. Note that it is also possible to specify multiple variables at once.
-
-#```{r, eval = FALSE}
-#tab$perturb(v = "income")
-#```
-
-#To get information about magnitude tables, method `numtab()` can be used. In this case, we can set an additional argument #`mean_before_sum` that is either `TRUE` or `FALSE` and specifies how the perturbed cell values are computed. Details on this method #can be found in *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau #of Statistics* (Thompson, Broadfoot, Elazar) in Section *6.3*. All other arguments are identical to method `freqtab()` that was #previously introduced.
-
-#```{r, eval = FALSE}
-#p_income <- tab$numtab(v = "income", mean_before_sum = TRUE)
-#p_income
-#```
-
-### Extract information from results
-#Some auxiliary methods may be applied to an object created with `ck_setup()`. For example one can query the applied perturbations for #counts using the `mod_cnts()` method. This returns a `data.table` showing for each cell and tabulated variable the row and the column #of the perturbation table that was used to find the perturbation value actually used. The value itself is also included.
-
-#```{r}
-#tab$mod_cnts()
-#```
-
-#Information on perturbations for numerical variables can be extracted using `mod_nums()`. This `data.table` contains the ids of the #observations of the input variables that have been modified. For each observation and tabulated numerical variable (given in #`numvars`), the parameters used in modifying (direction, magnitude and noise) are shown as well as the original values, the #perturbation and the final modified value. These values were finally used to compute the tables itself.
-#```{r, echo = FALSE}
-#message("WRITE METHOD mod_nums()")
-#```
-
-#```{r, eval = FALSE}
-#tab$mod_nums()
-#```
-```
-
+### Additional Features
 Finally we note that there are `print` and `summary` methods implemented for objects created with from `ck_setup()` which can be used as shown below:
 
 The `print()`-method shows the dimension of the table as well as the variables that are (or possibly can be) perturbed. It is also displayed if the table was constructed using weights. 
